update README vari e creazione scheletro data_module

--- a/data_module/pubspec.yaml
+++ b/data_module/pubspec.yaml
@@ -24,12 +24,19 @@ dependencies:
   flutter:
     sdk: flutter
 
+  domain_module:
+    path: ../domain_module
+  common_module:
+    path: ../common_module
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_riverpod: ^2.5.1
   dio: ^5.4.3+1
   awesome_dio_interceptor: ^1.2.0
+  shared_preferences: ^2.2.3
+  freezed_annotation: ^2.4.1
 
 dev_dependencies:
   flutter_test:
