--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   go_router: ^14.1.4
   flutter_flavorizr: ^2.2.3
   build_runner: ^2.4.9
+  json_serializable: ^6.8.0
 
 dev_dependencies:
   flutter_test:
